--- a/kratifireworks/pubspec.yaml
+++ b/kratifireworks/pubspec.yaml
@@ -18,16 +18,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  intl: "^0.15.6"
-  http: "^0.12.0+2"
-  progress_dialog: ^1.2.4
-
+  intl: "^0.17.0"
+  http: "^0.13.3"
+  responsive_framework: ^0.1.4
+  flutter_typeahead: ^3.2.1
+  pdf: ^3.6.0
+  open_file: ^3.2.1
+  universal_html: ^2.0.8
+  printing: ^5.4.1
+  path_provider: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,8 +55,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -64,17 +68,24 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: RobotoThin
+      fonts:
+        - asset: fonts/Roboto-Thin.ttf
+    - family: RobotoLight
+      fonts:
+        - asset: fonts/Roboto-Light.ttf
+    - family: RobotoRegular
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
+    - family: RobotoMedium
+      fonts:
+        - asset: fonts/Roboto-Medium.ttf
+    - family: RobotoBold
+      fonts:
+        - asset: fonts/Roboto-Bold.ttf
+    - family: RobotoBlack
+      fonts:
+        - asset: fonts/Roboto-Black.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
