--- a/kratifireworks/pubspec.yaml
+++ b/kratifireworks/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   universal_html: ^2.0.8
   printing: ^5.4.1
   path_provider: ^2.0.2
+  google_fonts: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
